# bookmanager

./: .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  CURRENT_STATUS.md  DATABASE_QUICK_REFERENCE.md  DATABASE_TUTORIAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  README.md
include/core/: book.h  book_status.h  database.h  reading_session.h
include/ui/: mainwindow.h  theme.h
include/ui/dialogs/: book_dialog.h
include/utils/: date_utils.h  string_utils.h
src/: main.cpp
src/core/: book.cpp  database.cpp  reading_session.cpp
src/ui/: mainwindow.cpp  theme.cpp
src/ui/dialogs/: book_dialog.cpp
